# swtor-simulator

./: Cargo.toml  README.md  build.rs  jedipedia.js
src/: ecs_system.rs  main.rs  parse.rs  types.rs  utils.rs
