[package]
name = "swtor-sim"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assoc = "0.1.3"
bevy = "0.12"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.25", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
# phf = { version = "0.11", default-features = false }
# phf_codegen = "0.11"
